Some more simplification